--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('CLONE') {
             steps {
-                git branch: 'dev_test', credentialsId: 'credential_Id', url: 'https://lab.ssafy.com/s08-final/S08P31B203.git'
+                git branch: 'build_be', credentialsId: 'credential_Id', url: 'https://lab.ssafy.com/s08-final/S08P31B203.git'
             }
         }
 
