--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -31,8 +31,8 @@ pipeline {
             steps {
             sh '''
             echo 'delete previous crayon-next-container'
-            # docker stop crayon-next-container
-            # docker rm crayon-next-container
+            docker stop crayon-next-container
+            docker rm crayon-next-container
             docker run -d -p 3000:3000 --name crayon-next-container gmkim716/crayon-next-container
             echo 'Success'
             '''
