--- a/front/package.json
+++ b/front/package.json
@@ -13,24 +13,24 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "next": "^13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
-    "tailwind-styled-components": "^2.2.0"
+    "tailwind-styled-components": "^2.2.0",
+    "typescript": "5.0.4"
   }
 }
