--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('CLONE')
         {
             steps{
-                git branch : 'dev_test', credentialsId : 'gitlab id / password', url : 'https://lab.ssafy.com/s08-final/S08P31B203.git'
+                git branch : 'build_fe2', credentialsId : '	credential_Id', url : 'https://lab.ssafy.com/s08-final/S08P31B203.git'
             }
         }
 
