--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -1,41 +1,43 @@
 pipeline {
     agent any
     stages {
-        stage('CLONE')
-        {
-            steps{
-                git branch : 'build_fe2', credentialsId : '	credential_Id', url : 'https://lab.ssafy.com/s08-final/S08P31B203.git'
+        stage('CLONE') {
+            steps {
+                git branch: 'build_fe', credentialsId: 'credential_Id', url: 'https://lab.ssafy.com/s08-final/S08P31B203.git'
             }
         }
 
-        stage('BUILD')
-        {
+        stage('DOCKER BUILD') {
             steps
             {
                 sh '''
-                chmod +x gradlew
-                ./gradlew clean build
+                echo 'docker build dir ' ${PWD}
+                cd front
+            
+                docker stop crayon-next-container || true
+                docker rm crayon-next-container || true
+                
+                
+                docker rmi gmkim716/crayon-next-container || true
+                echo 'Remove if gmkim716/crayon-next-container exist'
+                
+                docker build -t gmkim716/crayon-next-container .
+                cd
                 '''
             }
         }
-        stage('DOCKER BUILD')
-        {
-            steps
-            {
-                sh "docker build -t gmkim716/crayon-spring-container ."
-            }
-        }
 
-        stage('DEPLOY')
-        {
-            steps
-            {
+        stage('DEPLOY') {
+            steps {
             sh '''
+            echo 'delete previous crayon-next-container'
+            # docker stop crayon-next-container
+            # docker rm crayon-next-container
             docker run -d -p 3002:3000 --name crayon-next-container gmkim716/crayon-next-container
             echo 'Success'
             '''
             }
-
         }
     }
 }
+
