--- a/back-end/coldcrayon/src/main/resources/application-local.yml
+++ b/back-end/coldcrayon/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
 #    url: jdbc:mariadb://host.docker.internal:3306/crayondb
-    url: jdbc:mariadb://localhost:3306/crayondb
+    url: jdbc:mariadb://localhost:3306/crayondb?allowPublicKeyRetrieval=true&useSSL=false
     driver-class-name: org.mariadb.jdbc.Driver
     username: dev
     password: test1234
@@ -26,7 +26,7 @@ spring:
     defer-datasource-initialization: true
   data:
     mongodb:
-      host: host.docker.internal
+      host: localhost
       port: 27018
       authentication-database: admin
       database: crayondb
@@ -39,7 +39,7 @@ spring:
         max-idle: 10
         min-idle: 2
     port: 6363
-    host: host.docker.internal
+    host: localhost
     password: '1q2w3e4r'
   mvc:
     pathmatch:
