--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stage('BUILD') {
             steps {
                 sh '''
-                cd coldcrayon
+                cd back-end/coldcrayon
                 chmod +x gradlew
                 ./gradlew clean build
                 '''
