--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         stage('DOCKER BUILD') {
             steps
             {
+                sh "pwd"
                 cd back-end/cold/crayon
                 sh "pwd"
                 sh "docker build -t gmkim716/crayon-spring-container ."
