--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -19,9 +19,10 @@ pipeline {
         stage('DOCKER BUILD') {
             steps
             {
-                sh "cd ./back-end/coldcrayon"
-                sh "pwd"
-                sh "ls -al"
+                sh "
+                cd ./back-end/
+                pwd ls -al
+                "
                 sh "docker build -t gmkim716/crayon-spring-container ."
             }
         }
