--- a/back-end/coldcrayon/src/main/resources/application-server.yml
+++ b/back-end/coldcrayon/src/main/resources/application-server.yml
@@ -24,13 +24,13 @@ spring:
         use_sql_comments: true
     defer-datasource-initialization: true
   data:
-    mongodb:
-      host: mongodb
-      port: 27017
-      authentication-database: admin
-      database: crayon
-      username: root
-      password: "se7enngiths"
+#    mongodb:
+#      host: mongodb
+#      port: 27017
+#      authentication-database: admin
+#      database: crayon
+#      username: root
+#      password: "se7enngiths"
   redis:
     lettuce:
       pool:
