--- a/node-server/Dockerfile
+++ b/node-server/Dockerfile
@@ -5,13 +5,13 @@ WORKDIR /usr/src/app
 
 # 앱 의존성 설치
 # 가능한 경우 package.json과 package-lock.json을 모두 복사하기 위해 와일드 카드 사용
-COPY packag*.json ./
+COPY package*.json ./
 
 RUN npm install
 
 # 앱 소스 추가
 COPY . .
 
-EXPOSE 3000
+EXPOSE 3001
 
-CMD ["node", "index.js"]
+CMD ["npm", "run", "start"]
