--- a/back-end/coldcrayon/src/main/resources/application-local.yml
+++ b/back-end/coldcrayon/src/main/resources/application-local.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
 #    url: jdbc:mariadb://host.docker.internal:3306/crayondb
-    url: jdbc:mariadb://localhost:3306/crayondb
+    url: jdbc:mariadb://localhost:3307/crayon
     driver-class-name: org.mariadb.jdbc.Driver
     username: dev
-    password: test1234
+    password: se7enngiths
     hikari:
       pool-name: jpa-hikari-pool
       maximum-pool-size: 5
@@ -26,12 +26,12 @@ spring:
     defer-datasource-initialization: true
   data:
     mongodb:
-      host: host.docker.internal
+      host: localhost
       port: 27018
       authentication-database: admin
-      database: crayondb
+      database: crayon
       username: root
-      password: '1q2w3e4r'
+      password: 'se7enngiths'
   redis:
     lettuce:
       pool:
@@ -39,7 +39,7 @@ spring:
         max-idle: 10
         min-idle: 2
     port: 6363
-    host: host.docker.internal
+    host: localhost
     password: '1q2w3e4r'
   mvc:
     pathmatch:
