chore yml 파일 수정

--- a/back-end/coldcrayon/src/main/resources/application-local.yml
+++ b/back-end/coldcrayon/src/main/resources/application-local.yml
@@ -51,9 +51,9 @@ spring:
       registration:
         naver:
           # 애플리케이션 정보 - Client ID
-          clientId: 'LajRrDsgucSB36TJBijt'
+          clientId: Client ID
           # 애플리케이션 정보 - Client Secret
-          clientSecret: 'LPHxkBJ3S3'
+          clientSecret: Client Secret
           clientAuthenticationMethod: post
           authorizationGrantType: authorization_code
           redirectUri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
