--- a/back-end/coldcrayon/build.gradle
+++ b/back-end/coldcrayon/build.gradle
@@ -60,8 +60,10 @@ dependencies {
 	// Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
-
+	// S3
 	implementation "com.amazonaws:aws-java-sdk-s3:1.12.281"
+	// WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
