--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "tailwind-styled-components": "^2.2.0"
