--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -8,6 +8,17 @@ pipeline {
         }
 
         stage('BUILD') {
+		steps {
+			withCredentials([string(credentialsId: 'clientId', variable: 'clientId'), 					string(credentialsId: 'clientSecret', variable: 'clientSecret')]) {
+    					sh '''
+					cd back-end/coldcrayon/src/main/resources/
+					echo $clientId:$clientSecret > application-server.yml
+					'''
+
+			}
+			
+			
+		}
             steps {
                 sh '''
                 cd back-end/coldcrayon
