--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -9,17 +9,11 @@ pipeline {
 
         stage('BUILD') {
             steps {
-                script {
-                withCredentials([string(credentialsId: 'clientId', variable: 'clientId'), string(credentialsId: 'clientSecret', variable: 'clientSecret')]) {
-                        sh '''
-                        cd back-end/coldcrayon/src/main/resources/
-                        echo '${clientId}'
-                        echo '$clientId'
-                        echo '$clientId:$clientSecret > application-server.yml'
-                        cat application-server.yml
-                        '''
+                withCredentials([file(credentialsId: 'server', variable: 'yml')]) {
+                    script {
+                        sh 'cp $yml back-end/coldcrayon/src/main/resources/application-server.yml'
                     }
-                }
+		        }
                 sh '''
                 cd back-end/coldcrayon
                 chmod +x gradlew
