--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
                         sh 'cp $yml back-end/coldcrayon/src/main/resources/application-server.yml'
                         sh '''
                         cd back-end/coldcrayon/src/main/resources
+                        cat application-server.yml
                         ls -al
                         '''
                     }
