--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
@@ -36,10 +34,13 @@
     "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
     "@svgr/webpack": "^7.0.0",
     "@types/websocket": "^1.0.5",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
-    "tailwind-styled-components": "^2.2.0"
+    "tailwind-styled-components": "^2.2.0",
+    "typescript": "5.0.4"
   }
 }
