--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/react-js-pagination": "^3.0.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "eslint": "8.39.0",
@@ -27,6 +28,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.5",
