--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@types/react-js-pagination": "^3.0.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
+    "cookies-next": "^2.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "https": "^1.0.0",
@@ -36,9 +37,9 @@
     "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
-    "@svgr/webpack": "^7.0.0",
     "@types/websocket": "^1.0.5",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
