--- a/back-end/coldcrayon/src/main/resources/application-local.yml
+++ b/back-end/coldcrayon/src/main/resources/application-local.yml
@@ -25,13 +25,13 @@ spring:
         use_sql_comments: true
     defer-datasource-initialization: true
   data:
-  #    mongodb:
-  #      host: localhost
-  #      port: 27018
-  #      authentication-database: admin
-  #      database: crayon
-  #      username: root
-  #      password: "se7enngiths"
+#    mongodb:
+#      host: localhost
+#      port: 27018
+#      authentication-database: admin
+#      database: crayon
+#      username: root
+#      password: "se7enngiths"
 
   redis:
     lettuce:
@@ -86,9 +86,9 @@ spring:
           userNameAttribute: id
 # cors 설정
 cors:
-  allowed-origins: "http://localhost:3000"
+  allowed-origins: 'http://localhost:3000'
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-  allowed-headers: "*"
+  allowed-headers: '*'
   max-age: 3600
 
 logging:
