--- a/back-end/coldcrayon/src/main/resources/application-server.yml
+++ b/back-end/coldcrayon/src/main/resources/application-server.yml
@@ -1,7 +1,3 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /chat
 spring:
   datasource:
     url: jdbc:mariadb://13.124.200.139:3307/crayon
@@ -44,6 +40,7 @@ spring:
     port: 6379
     host: 13.124.200.139
     password: "1q2w3e4r"
+
 
   # Security OAuth
   security:
@@ -90,9 +87,9 @@ spring:
 
 # cors 설정
 cors:
-  allowed-origins: "http://localhost:3000"
+  allowed-origins: 'http://localhost:3000'
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-  allowed-headers: "*"
+  allowed-headers: '*'
   max-age: 3600
 
 logging:
