--- a/back-end/coldcrayon/build.gradle
+++ b/back-end/coldcrayon/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// MongoDB
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+//	// MongoDB
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// MariaDB
