--- a/front/package.json
+++ b/front/package.json
@@ -33,8 +33,7 @@
     "sweetalert2": "^11.7.5",
     "swiper": "^8.4.7",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "websocket": "^1.0.34"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
