--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -12,7 +12,10 @@ pipeline {
                 withCredentials([file(credentialsId: 'envProperties', variable: 'envProperties'), file(credentialsId: 'server', variable: 'yml')]) {
                     script {
                         sh 'cp $yml back-end/coldcrayon/src/main/resources/application-server.yml'
-	            sh 'cp $envProperties back-end/coldcrayon/src/main/resources/env.properties'
+	                    sh '''
+                        chmod +w back-end/coldcrayon/src/main/resources/env.properties
+                        cp $envProperties back-end/coldcrayon/src/main/resources/env.properties
+                        '''
                         sh '''
                         cd back-end/coldcrayon/src/main/resources
                         cat application-server.yml
