jenkins file env.properties 수정

--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -19,7 +19,8 @@ pipeline {
                         sh '''
                         cd back-end/coldcrayon/src/main/resources
                         cat application-server.yml
-                        ls -al
+                        ls -al env.properties
+                        cat 
                         '''
                     }
 		        }
