chore/be jenkins파일 수정

--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -19,8 +19,8 @@ pipeline {
                         sh '''
                         cd back-end/coldcrayon/src/main/resources
                         cat application-server.yml
-                        ls -al env.properties
-                        cat 
+                        ls -al 
+                        cat env.properties
                         '''
                     }
 		        }
