--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -48,7 +48,7 @@ pipeline {
             echo 'delete previous spring-container'
             docker stop crayon-spring-container
             docker rm crayon-spring-container
-            docker run -d -p 8080:8080 --name crayon-spring-container gmkim716/crayon-spring-container
+            docker run -d -p 8080:8080 -v /getchacrayon/image/:/getchacrayon/image/ --name crayon-spring-container gmkim716/crayon-spring-container
             echo 'Success'
             '''
             }
