--- a/back-end/coldcrayon/Jenkinsfile
+++ b/back-end/coldcrayon/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
             echo 'delete previous spring-container'
             docker stop crayon-spring-container
             docker rm crayon-spring-container
-            docker run -d -p 8080:8080 --name crayon-spring-container gmkim716/crayon-spring-container
+            docker run -d -p 8080:8080 -v /getchacrayon/image/history/:/getchacrayon/image/history/ --name crayon-spring-container gmkim716/crayon-spring-container
             echo 'Success'
             '''
             }
